--- a/refs.bib
+++ b/refs.bib
@@ -1025,6 +1025,200 @@
     volume = {18},
     doi = {10.1137/S0895480104440754}
 }
+@article{feng22,
+    title = {{Optimal identifying codes of two families of Cayley graphs}},
+    author = {M. Feng and X. Ma and L. Feng},
+    journal = {{Discrete Applied Mathematics}},
+    year = {2022},
+    pages = {199--210},
+    volume = {320},
+    doi = {10.1016/j.dam.2022.05.023}
+}
+@article{dant18b,
+    title = {{Minimum density of identifying codes of king grids}},
+    author = {R. Dantas and F. Havet and R. Sampaio},
+    journal = {{Discrete Mathematics}},
+    year = {2018},
+    pages = {2708--2719},
+    volume = {341},
+    doi = {10.1016/j.disc.2018.06.035}
+}
+@article{dant18,
+    title = {{Minimum density of identifying codes of king grids}},
+    author = {R. Dantas and R. Sampaio and F. Havet},
+    journal = {{Electronic Notes in Discrete Mathematics}},
+    year = {2017},
+    pages = {51--56},
+    volume = {62},
+    doi = {10.1016/j.endm.2017.10.010}
+}
+@article{mill17,
+    title = {{A note on the locating-total domination in graphs}},
+    author = {M. Miller and R. Rajan and R. Jayagopal and I. Rajasingh and P. Manuel},
+    journal = {{Discussiones Mathematicae Graph Theory}},
+    year = {2017},
+    pages = {745--754},
+    volume = {37},
+    doi = {10.7151/dmgt.1961}
+}
+@article{mila13b,
+    title = {{Set graphs. II. Complexity of set graph recognition and similar problems}},
+    author = {M. Milani\u{c} and R. Rizzi and A. Tomescu},
+    journal = {{Theoretical Computer Science}},
+    year = {2014},
+    pages = {70--81},
+    volume = {547},
+    doi = {10.1016/j.tcs.2014.06.017}
+}
+@article{junn12b,
+    title = {{Optimal lower bound for 2-identifying codes in the hexagonal grid}},
+    author = {V. Junnila and T. Laihonen},
+    journal = {{Electronic Journal of Combinatorics}},
+    year = {2012},
+    volume = {19},
+    number = {2},
+    doi = {10.48550/arXiv.1202.0670}
+}
+@article{junn19,
+    title = {{Optimal bounds on codes for location in circulant graphs}},
+    author = {V. Junnila and T. Laihonen and G. Paris},
+    journal = {{Cryptography and Communications}},
+    year = {2019},
+    pages = {621--640},
+    volume = {11},
+    number = {4},
+    doi = {10.1007/s12095-018-0316-3}
+}
+@article{hall01,
+    title = {{On the approximability of the minimum collection problem}},
+    author = {B. Halld\'orsson and M. Halld\'orsson and R. Ravi},
+    journal = {{Lecture Notes in Computer Science}},
+    year = {2001},
+    pages = {158--169},
+    publisher = {Springer-Verlag},
+    volume = {2161},
+    doi = {10.1007/3-540-44676-1_13}
+}
+@article{char05a,
+    title = {{On the structure of identifiable graphs}},
+    author = {I. Charon and O. Hudry and A. Lobstein},
+    journal = {{Electronic Notes in Discrete Mathematics}},
+    year = {2005},
+    pages = {491--495},
+    volume = {22},
+    doi = {10.1016/j.endm.2005.06.094}
+}
+@article{pelt13,
+    title = {{Maximum difference about the size of optimal identifying codes in graphs differing by one vertex}},
+    author = {M. Pelto},
+    journal = {{Discrete Mathematics and Theoretical Computer Science}},
+    year = {2015},
+    pages = {339--356},
+    volume = {17},
+    number = {1},
+    doi = {10.46298/dmtcs.2107}
+}
+@article{capp22K,
+    title = {{Open-independent, open-locating-dominating sets: structural aspects of some classes of graphs}},
+    author = {M. Cappelle and E. Coelho and L. Foulds and H. Longo},
+    journal = {{Discrete Mathematics and Theoretical Computer Science}},
+    year = {2022},
+    pages = {18},
+    volume = {24},
+    number = {1},
+    doi = {10.46298/dmtcs.8440}
+}
+@article{fahl06,
+    title = {{A faster branch-and-bound algorithm for the test-cover problem based on set-covering techniques}},
+    author = {T. Fahle and K. Tiemann},
+    journal = {{ACM Journal of Experimental Algorithmics}},
+    year = {2006},
+    volume = {11},
+    doi = {10.1145/1187436.1216579}
+}
+@article{savi18,
+    title = {{The open-locating-dominating number of some convex polytopes}},
+    author = {A. Lj. Savi\'c and Z. Lj. Maksimovi\'c and M. Bogdanovi\'c},
+    journal = {{Filomat}},
+    year = {2018},
+    pages = {635--642},
+    volume = {32},
+    number = {2},
+    doi = {10.2298/FIL1802635S}
+}
+@article{beht16,
+    title = {{On the locating chromatic number of the Cartesian product of graphs}},
+    author = {A. Behtoei and B. Omoomi},
+    journal = {{Ars Combinatoria}},
+    year = {2016},
+    pages = {221--235},
+    volume = {126},
+    doi = {10.48550/arXiv.1106.3453}
+}
+@article{bens18,
+    title = {{Sequential metric dimension}},
+    author = {J. Bensmail and D. Mazauric and F. Mc inerney and N. Nisse and S. P\'erennes},
+    journal = {{Lecture Notes in Computer Science}},
+    year = {2018},
+    publisher = {Springer-Verlag},
+    pages = {36--50},
+    doi = {10.1007/s00453-020-00707-5}
+}
+@article{char04b,
+    title = {{Extremal cardinalities for identifying and locating-dominating codes in graphs}},
+    author = {I. Charon and O. Hudry and A. Lobstein},
+    journal = {{Discrete Mathematics}},
+    year = {2007},
+    pages = {356--366},
+    volume = {307},
+    doi = {10.1016/j.disc.2005.09.027}
+}
+@article{char12a,
+    title = {{Minimum sizes of identifying codes in graphs differing by one edge}},
+    author = {I. Charon and I. Honkala and O. Hudry and A. Lobstein},
+    journal = {{Cryptography and Communications -- Discrete Structures, Boolean Functions and Sequences}},
+    year = {2014},
+    pages = {157--170},
+    volume = {6},
+    doi = {10.1007/s12095-013-0094-x}
+}
+@article{chel14,
+    title = {{On open neighborhood locating-dominating in graphs}},
+    author = {M. Chellali and N. Rad and S. Seo and P. Slater},
+    journal = {{Electronic Journal of Graph Theory and Applications}},
+    year = {2014},
+    pages = {87--98},
+    volume = {2},
+    number = {2},
+    doi = {10.5614/ejgta.2014.2.2.1}
+}
+@article{dhal19a,
+    title = {{Constructions of $r$-identifying codes and ($r,\leq \ell$)-identifying codes}},
+    author = {R. Dhanalakshmi and C. Durairajan},
+    journal = {{Indian Journal of Pure and Applied Mathematics}},
+    year = {2019},
+    pages = {531--547},
+    volume = {50},
+    doi = {10.1007/s13226-019-0343-6}
+}
+@article{cohe01b,
+    title = {{On codes identifying vertices in the two-dimensional square lattice with diagonals}},
+    author = {G. Cohen and I. Honkala and A. Lobstein and G. Z\'emor},
+    journal = {{IEEE Transactions on Computers}},
+    year = {2001},
+    pages = {174--176},
+    volume = {50},
+    doi = {10.1109/12.908992}
+}
+@article{frie06,
+    title = {{Codes identifying sets of vertices in random networks}},
+    author = {A. Frieze and R. Martin and J. Moncel and M. Ruszink\'o and C. Smyth},
+    journal = {{Discrete Mathematics}},
+    year = {2007},
+    pages = {1094--1107},
+    volume = {307},
+    doi = {10.1016/j.disc.2006.07.041}
+}
 @article{junn15,
     title = {{Optimal locating-total dominating sets in strips of height 3}},
     author = {V. Junnila},
@@ -1325,7 +1519,7 @@
 }
 @article{cohe18k,
     title = {{Spy-game on graphs: complexity and simple topologies}},
-    author = {N. Cohen and N. Martins and F. Mc inerney and N. Nisse and S. P\'e\-rennes and R. Sampaio},
+    author = {N. Cohen and N. Martins and F. Mc inerney and N. Nisse and S. P\'erennes and R. Sampaio},
     journal = {{Theoretical Computer Science}},
     year = {2018},
     pages = {1--15},
@@ -1647,7 +1841,7 @@
 }
 @article{ghor20,
     title = {{The watching system as a generalization of identifying code}},
-    author = {M. Ghorbani and M. Dehmer and H. Maimani and S. Maddah and M. Rooz\-bayani and F. Emmert-streib},
+    author = {M. Ghorbani and M. Dehmer and H. Maimani and S. Maddah and M. Roozbayani and F. Emmert-streib},
     journal = {{Applied Mathematics and Computation}},
     year = {2020},
     pages = {7},
@@ -1968,14 +2162,6 @@
     pages = {2214--2221},
     volume = {159}
 }
-@article{beht16,
-    title = {{On the locating chromatic number of the Cartesian product of graphs}},
-    author = {A. Behtoei and B. Omoomi},
-    journal = {{Ars Combinatoria}},
-    year = {2016},
-    pages = {221--235},
-    volume = {126}
-}
 @article{benh08a,
     title = {{Adaptive identification in graphs}},
     author = {Y. Ben-haim and S. Gravier and A. Lobstein and J. Moncel},
@@ -2008,14 +2194,6 @@
     year = {2005},
     pages = {69--82},
     volume = {19}
-}
-@article{bens18,
-    title = {{Sequential metric dimension}},
-    author = {J. Bensmail and D. Mazauric and F. Mc inerney and N. Nisse and S. P\'e\-rennes},
-    journal = {{Lecture Notes in Computer Science}},
-    year = {2018},
-    publisher = {Springer-Verlag},
-    pages = {36--50}
 }
 @article{berg05,
     title = {{Discrete sensor placement problems in distribution networks}},
@@ -2101,7 +2279,7 @@
 }
 @article{bous14,
     title = {{Identifying codes and VC-dimension}},
-    author = {N. Bousquet and A. Lagoutte and Z. Li and A. Parreau and S. Tho\-mass\'e},
+    author = {N. Bousquet and A. Lagoutte and Z. Li and A. Parreau and S. Thomass\'e},
     journal = {{Proceedings of Bordeaux Graph Workshop}},
     year = {2014},
     pages = {63--64},
@@ -2109,7 +2287,7 @@
 }
 @article{bous15,
     title = {{Identifying codes in hereditary classes of graphs and VC-dimension}},
-    author = {N. Bousquet and A. Lagoutte and Z. Li and A. Parreau and S. Tho\-mass\'e},
+    author = {N. Bousquet and A. Lagoutte and Z. Li and A. Parreau and S. Thomass\'e},
     journal = {{SIAM Journal on Discrete Mathematics}},
     year = {2015},
     pages = {2047--2064},
@@ -2125,7 +2303,7 @@
     volume = {262}
 }
 @phdthesis{bouz12,
-    title = {{Algorithmes g\'en\'eriques en temps constant pour la r\'eso\-lution de probl\`emes combinatoires dans la classe des rotagraphes et fasciagraphes. Application aux codes identifiants, dominant-localisateurs et total-dominant-localisateurs}},
+    title = {{Algorithmes g\'en\'eriques en temps constant pour la r\'esolution de probl\`emes combinatoires dans la classe des rotagraphes et fasciagraphes. Application aux codes identifiants, dominant-localisateurs et total-dominant-localisateurs}},
     author = {M. Bouznif},
     month = {July},
     year = {2012},
@@ -2182,15 +2360,6 @@
     pages = {193--204},
     volume = {62}
 }
-@article{capp22K,
-    title = {{Open-independent, open-locating-dominating sets: structural aspects of some classes of graphs}},
-    author = {M. Cappelle and E. Coelho and L. Foulds and H. Longo},
-    journal = {{Discrete Mathematics and Theoretical Computer Science}},
-    year = {2022},
-    pages = {18},
-    volume = {24},
-    number = {1}
-}
 @article{cars95a,
     title = {{On generalized location-domination}},
     author = {D. Carson},
@@ -2205,15 +2374,6 @@
     journal = {{Fault Tolerant Parallel and Distributed Systems}},
     year = {1998},
     pages = {285--301}
-}
-@article{Echa09,
-    title = {{Discriminating codes in bipartite graphs: bounds, extremal cardinalities, complexity}},
-    author = {E. Charbit and I. Charon and G. Cohen and O. Hudry and A. Lobstein},
-    journal = {{Advances in Mathematics of Communications}},
-    year = {2008},
-    pages = {403--420},
-    volume = {4},
-    number = {2}
 }
 @article{char08c,
     title = {{Links between discriminating and identifying codes in the binary Hamming space}},
@@ -2264,14 +2424,6 @@
     pages = {119--136},
     volume = {5}
 }
-@article{char12a,
-    title = {{Minimum sizes of identifying codes in graphs differing by one edge}},
-    author = {I. Charon and I. Honkala and O. Hudry and A. Lobstein},
-    journal = {{Cryptography and Communications -- Discrete Structures, Boolean Functions and Sequences}},
-    year = {2014},
-    pages = {157--170},
-    volume = {6}
-}
 @article{char02a,
     title = {{Identifying codes with small radius in some infinite regular graphs}},
     author = {I. Charon and O. Hudry and A. Lobstein},
@@ -2305,14 +2457,6 @@
     pages = {177--195},
     volume = {32}
 }
-@article{char05a,
-    title = {{On the structure of identifiable graphs}},
-    author = {I. Charon and O. Hudry and A. Lobstein},
-    journal = {{Electronic Notes in Discrete Mathematics}},
-    year = {2005},
-    pages = {491--495},
-    volume = {22}
-}
 @article{char04c,
     title = {{Possible cardinalities for locating-dominating codes in graphs}},
     author = {I. Charon and O. Hudry and A. Lobstein},
@@ -2320,14 +2464,6 @@
     year = {2006},
     pages = {23--32},
     volume = {34}
-}
-@article{char04b,
-    title = {{Extremal cardinalities for identifying and locating-dominating codes in graphs}},
-    author = {I. Charon and O. Hudry and A. Lobstein},
-    journal = {{Discrete Mathematics}},
-    year = {2007},
-    pages = {356--366},
-    volume = {307}
 }
 @article{char08a,
     title = {{Extremal values for the maximum degree in a twin-free graph}},
@@ -2345,14 +2481,6 @@
     year = {2011},
     pages = {30},
     address = {Paris, France}
-}
-@article{char09,
-    title = {{Extremal values for the maximum degree in a twin-free graph}},
-    author = {I. Charon and O. Hudry and A. Lobstein},
-    journal = {{Ars Combinatoria}},
-    year = {2012},
-    pages = {257--274},
-    volume = {107}
 }
 @article{char22,
     title = {{Codes in the $q$-ary Lee hypercube}},
@@ -2378,14 +2506,6 @@
     pages = {65--79},
     volume = {269}
 }
-@article{chel08,
-    title = {{On locating and differentiating-total domination in trees}},
-    author = {M. Chellali},
-    journal = {{Discussiones Mathematicae Graph Theory}},
-    year = {2008},
-    pages = {383--392},
-    volume = {28}
-}
 @article{chel10,
     title = {{On locating-domination in graphs}},
     author = {M. Chellali and M. Mimouni and P. Slater},
@@ -2393,15 +2513,6 @@
     year = {2010},
     pages = {223--235},
     volume = {30}
-}
-@article{chel14,
-    title = {{On open neighborhood locating-dominating in graphs}},
-    author = {M. Chellali and N. Rad and S. Seo and P. Slater},
-    journal = {{Electronic Journal of Graph Theory and Applications}},
-    year = {2014},
-    pages = {87--98},
-    volume = {2},
-    number = {2}
 }
 @article{cohe00a,
     title = {{Bounds for codes identifying vertices in the hexagonal grid}},
@@ -2419,14 +2530,6 @@
     pages = {97--109},
     volume = {56},
     address = {Piscataway, USA}
-}
-@article{cohe01b,
-    title = {{On codes identifying vertices in the two-dimensional square lattice with diagonals}},
-    author = {G. Cohen and I. Honkala and A. Lobstein and G. Z\'emor},
-    journal = {{IEEE Transactions on Computers}},
-    year = {2001},
-    pages = {174--176},
-    volume = {50}
 }
 @article{cohe99c,
     title = {{Identification d'une station d\'efaillante dans un contexte radio-mobile, Aspects Algorithmiques des T\'el\'ecommunications (AlgoTel '99)}},
@@ -2460,30 +2563,6 @@
     pages = {1584--1597},
     volume = {340}
 }
-@article{dant18b,
-    title = {{Minimum density of identifying codes of king grids}},
-    author = {R. Dantas and F. Havet and R. Sampaio},
-    journal = {{Discrete Mathematics}},
-    year = {2018},
-    pages = {2708--2719},
-    volume = {341}
-}
-@article{dant18,
-    title = {{Minimum density of identifying codes of king grids}},
-    author = {R. Dantas and R. Sampaio and F. Havet},
-    journal = {{Electronic Notes in Discrete Mathematics}},
-    year = {2017},
-    pages = {51--56},
-    volume = {62}
-}
-@article{dhal19a,
-    title = {{Constructions of $r$-identifying codes and ($r,\leq \ell$)-identifying codes}},
-    author = {R. Dhanalakshmi and C. Durairajan},
-    journal = {{Indian Journal of Pure and Applied Mathematics}},
-    year = {2019},
-    pages = {531--547},
-    volume = {50}
-}
 @article{dhanC22,
     title = {{Bounds on $r$-identifying codes in $q$-ary Lee space}},
     author = {R. Dhanalakshmi and C. Durairajan},
@@ -2516,21 +2595,6 @@
     year = {2008},
     pages = {2250--2263},
     volume = {156}
-}
-@article{fahl06,
-    title = {{A faster branch-and-bound algorithm for the test-cover problem based on set-covering techniques}},
-    author = {T. Fahle and K. Tiemann},
-    journal = {{ACM Journal of Experimental Algorithmics}},
-    year = {2006},
-    volume = {11}
-}
-@article{feng22,
-    title = {{Optimal identifying codes of two families of Cayley graphs}},
-    author = {M. Feng and X. Ma and L. Feng},
-    journal = {{Discrete Applied Mathematics}},
-    year = {2022},
-    pages = {199--210},
-    volume = {320}
 }
 @article{feng14,
     title = {{Identifying codes of corona product graphs}},
@@ -2612,14 +2676,6 @@
     pages = {213--227},
     volume = {76}
 }
-@article{frie06,
-    title = {{Codes identifying sets of vertices in random networks}},
-    author = {A. Frieze and R. Martin and J. Moncel and M. Ruszink\'o and C. Smyth},
-    journal = {{Discrete Mathematics}},
-    year = {2007},
-    pages = {1094--1107},
-    volume = {307}
-}
 @article{gari14,
     title = {{The difference between the metric dimension and the determining number of a graph}},
     author = {D. Garijo and A. Gonz\'alez and A. M\'arquez},
@@ -2684,15 +2740,6 @@
     year = {2018},
     pages = {143--160},
     volume = {162}
-}
-@article{hall01,
-    title = {{On the approximability of the minimum collection problem}},
-    author = {B. Halld\'orsson and M. Halld\'orsson and R. Ravi},
-    journal = {{Lecture Notes in Computer Science}},
-    year = {2001},
-    pages = {158--169},
-    publisher = {Springer-Verlag},
-    volume = {2161}
 }
 @article{hata05,
     title = {{$\Delta +300$ is a bound on the adjacent vertex distinguishing edge chromatic number}},
@@ -2807,15 +2854,6 @@
     year = {2021},
     pages = {3}
 }
-@article{iswa11,
-    title = {{On the metric dimension of corona product of graphs}},
-    author = {H. Iswadi and E. Baskoro and R. Simanjuntak},
-    journal = {{Far East Journal of Mathematical Sciences}},
-    year = {2011},
-    pages = {155--170},
-    volume = {52},
-    number = {2}
-}
 @article{jans08,
     title = {{An optimal result for codes identifying sets of words}},
     author = {S. Janson and T. Laihonen},
@@ -2855,14 +2893,6 @@
     pages = {335--343},
     volume = {159}
 }
-@article{junn12b,
-    title = {{Optimal lower bound for 2-identifying codes in the hexagonal grid}},
-    author = {V. Junnila and T. Laihonen},
-    journal = {{Electronic Journal of Combinatorics}},
-    year = {2012},
-    volume = {19},
-    number = {2}
-}
 @article{junn14,
     title = {{Optimal identification of sets of edges using $2$-factors}},
     author = {V. Junnila and T. Laihonen},
@@ -2888,15 +2918,6 @@
     pages = {3322--3341},
     volume = {67},
     number = {6}
-}
-@article{junn19,
-    title = {{Optimal bounds on codes for location in circulant graphs}},
-    author = {V. Junnila and T. Laihonen and G. Paris},
-    journal = {{Cryptography and Communications}},
-    year = {2019},
-    pages = {621--640},
-    volume = {11},
-    number = {4}
 }
 @article{junn19a,
     title = {{Solving two conjectures regarding codes for location in circulant graphs}},
@@ -2939,15 +2960,6 @@
     pages = {93--102},
     volume = {59}
 }
-@article{kina18,
-    title = {{Minimal locating-paired-dominating sets in triangular and king grids}},
-    author = {M. Kinawi and Z. Hussain and L. Niepel},
-    journal = {{Kuwait Journal of Science}},
-    year = {2018},
-    pages = {39--45},
-    volume = {45},
-    number = {3}
-}
 @article{kinc19,
     title = {{Tabu search for a mixed strength sensor location problem}},
     author = {R. Kincaid and R. Givens},
@@ -2982,7 +2994,7 @@
 }
 @inproceedings{laif07,
     title = {{Joint monitoring and routing in wireless sensor networks using robust identifying codes}},
-    author = {M. Laifenfeld and A. Trachtenberg and R. Cohen and D. Staro\-binski},
+    author = {M. Laifenfeld and A. Trachtenberg and R. Cohen and D. Starobinski},
     booktitle = {{Proceedings of IEEE Broadnets 2007}},
     month = {September},
     year = {2007},
@@ -3021,14 +3033,6 @@
     year = {2019},
     volume = {268},
     pages = {11}
-}
-@article{laih08b,
-    title = {{On graphs admitting codes identifying sets of vertices}},
-    author = {T. Laihonen and J. Moncel},
-    journal = {{Australasian Journal of Combinatorics}},
-    year = {2008},
-    pages = {81--91},
-    volume = {41}
 }
 @article{laih01a,
     title = {{Codes identifying sets of vertices}},
@@ -3094,22 +3098,6 @@
     year = {2013},
     pages = {677--690},
     volume = {161}
-}
-@article{mila13b,
-    title = {{Set graphs. II. Complexity of set graph recognition and similar problems}},
-    author = {M. Milani\u{c} and R. Rizzi and A. Tomescu},
-    journal = {{Theoretical Computer Science}},
-    year = {2014},
-    pages = {70--81},
-    volume = {547}
-}
-@article{mill17,
-    title = {{A note on the locating-total domination in graphs}},
-    author = {M. Miller and R. Rajan and R. Jayagopal and I. Rajasingh and P. Ma\-nuel},
-    journal = {{Discussiones Mathematicae Graph Theory}},
-    year = {2017},
-    pages = {745--754},
-    volume = {37}
 }
 @article{mojd22,
     title = {{On the conjectures of neighbor locating coloring of graphs}},
@@ -3317,15 +3305,6 @@
     year = {2014},
     pages = {641--659},
     volume = {36}
-}
-@article{pelt13,
-    title = {{Maximum difference about the size of optimal identifying codes in graphs differing by one vertex}},
-    author = {M. Pelto},
-    journal = {{Discrete Mathematics and Theoretical Computer Science}},
-    year = {2015},
-    pages = {339--356},
-    volume = {17},
-    number = {1}
 }
 @article{pelt13b,
     title = {{On locating-dominating codes in the infinite king grid}},
@@ -3539,15 +3518,6 @@
     year = {2003},
     volume = {10},
     number = {1}
-}
-@article{savi18,
-    title = {{The open-locating-dominating number of some convex polytopes}},
-    author = {A. Lj. Savi\'c and Z. Lj. Maksimovi\'c and M. Bogdanovi\'c},
-    journal = {{Filomat}},
-    year = {2018},
-    pages = {635--642},
-    volume = {32},
-    number = {2}
 }
 @article{seag12,
     title = {{Locating a robber on a graph}},
@@ -4623,4 +4593,55 @@
     year = {2016},
     pages = {176--179},
     address = {Bordeaux, France}
+}
+@article{char09,
+    title = {{Extremal values for the maximum degree in a twin-free graph}},
+    author = {I. Charon and O. Hudry and A. Lobstein},
+    journal = {{Ars Combinatoria}},
+    year = {2012},
+    pages = {257--274},
+    volume = {107}
+}
+@article{kina18,
+    title = {{Minimal locating-paired-dominating sets in triangular and king grids}},
+    author = {M. Kinawi and Z. Hussain and L. Niepel},
+    journal = {{Kuwait Journal of Science}},
+    year = {2018},
+    pages = {39--45},
+    volume = {45},
+    number = {3}
+}
+@article{chel08,
+    title = {{On locating and differentiating-total domination in trees}},
+    author = {M. Chellali},
+    journal = {{Discussiones Mathematicae Graph Theory}},
+    year = {2008},
+    pages = {383--392},
+    volume = {28}
+}
+@article{iswa11,
+    title = {{On the metric dimension of corona product of graphs}},
+    author = {H. Iswadi and E. Baskoro and R. Simanjuntak},
+    journal = {{Far East Journal of Mathematical Sciences}},
+    year = {2011},
+    pages = {155--170},
+    volume = {52},
+    number = {2}
+}
+@article{laih08b,
+    title = {{On graphs admitting codes identifying sets of vertices}},
+    author = {T. Laihonen and J. Moncel},
+    journal = {{Australasian Journal of Combinatorics}},
+    year = {2008},
+    pages = {81--91},
+    volume = {41}
+}
+@article{Echa09,
+    title = {{Discriminating codes in bipartite graphs: bounds, extremal cardinalities, complexity}},
+    author = {E. Charbit and I. Charon and G. Cohen and O. Hudry and A. Lobstein},
+    journal = {{Advances in Mathematics of Communications}},
+    year = {2008},
+    pages = {403--420},
+    volume = {4},
+    number = {2}
 }
