--- a/refs.bib
+++ b/refs.bib
@@ -855,6 +855,68 @@
     pages = {165--174},
     doi = {10.1109/ITA.2008.4601043}
 }
+@article{mart10,
+    title = {{Lower bounds for identifying codes in some infinite grids}},
+    author = {R. Martin and B. Stanton},
+    journal = {{Electronic Journal of Combinatorics}},
+    year = {2010},
+    volume = {17},
+    number = {1},
+    doi = {10.48550/arXiv.1004.3281}
+}
+@article{hata05,
+    title = {{$\Delta +300$ is a bound on the adjacent vertex distinguishing edge chromatic number}},
+    author = {H. Hatami},
+    journal = {{Journal of Combinatorial Theory, Series B}},
+    year = {2005},
+    pages = {246--256},
+    volume = {95},
+    doi = {10.1016/j.jctb.2005.04.002}
+}
+@article{grav04,
+    title = {{On graphs having a $V \setminus \{ x \}$ set as an identifying code}},
+    author = {S. Gravier and J. Moncel},
+    journal = {{Discrete Mathematics}},
+    year = {2007},
+    pages = {432--434},
+    volume = {307},
+    doi = {10.1016/j.disc.2005.09.035}
+}
+@article{hafi22,
+    title = {{On the locating chromatic number of trees}},
+    author = {Y. Hafidh and E. Baskoro},
+    journal = {{International Journal of Mathematics and Computer Science}},
+    year = {2022},
+    pages = {377--394},
+    volume = {17},
+    doi = {10.48550/arXiv.1912.05775}
+}
+@article{honk01a,
+    title = {{On codes identifying sets of vertices in Hamming spaces}},
+    author = {I. Honkala and T. Laihonen and S. Ranto},
+    journal = {{Designs, Codes and Cryptography}},
+    year = {2001},
+    pages = {193--204},
+    volume = {24},
+    doi = {10.1023/A:1011256721935}
+}
+@article{char03b,
+    title = {{Minimizing the size of an identifying or locating-dominating code in a graph is NP-hard}},
+    author = {I. Charon and O. Hudry and A. Lobstein},
+    journal = {{Theoretical Computer Science}},
+    year = {2003},
+    pages = {2109--2120},
+    volume = {290},
+    doi = {10.1016/S0304-3975(02)00536-4}
+}
+@article{inay21,
+    title = {{The locating chromatic number of book graph}},
+    author = {N. Inayah and W. Aribowo and M. Windra yahya},
+    journal = {{Journal of Mathematics}},
+    year = {2021},
+    pages = {3},
+    doi = {10.1155/2021/3716361}
+}
 @article{laih06a,
     title = {{Optimal $t$-edge-robust $r$-identifying codes in the king lattice}},
     author = {T. Laihonen},
@@ -2253,14 +2315,6 @@
     pages = {225--232},
     volume = {76}
 }
-@article{blid11k,
-    title = {{A characterization of locating-total domination edge critical graphs}},
-    author = {M. Blidia and W. Dali},
-    journal = {{Discussiones Mathematicae Graph Theory}},
-    year = {2011},
-    pages = {197--202},
-    volume = {31}
-}
 @article{blidC14,
     title = {{On locating and locating-total domination edge addition critical graphs}},
     author = {M. Blidia and W. Dali},
@@ -2360,14 +2414,6 @@
     pages = {193--204},
     volume = {62}
 }
-@article{cars95a,
-    title = {{On generalized location-domination}},
-    author = {D. Carson},
-    journal = {{Graph Theory, Combinatorics, and Applications: Proceedings of the 7th Quadrennial International Conference on the Theory and Applications of Graphs}},
-    year = {1995},
-    volume = {1},
-    pages = {161--179}
-}
 @article{chak98a,
     title = {{Fault detection and diagnosis in multiprocessor systems with point-to-point connections}},
     author = {K. Chakrabarty and M. Karpovsky and L. Levitin},
@@ -2431,14 +2477,6 @@
     year = {2002},
     volume = {9},
     number = {1}
-}
-@article{char03b,
-    title = {{Minimizing the size of an identifying or locating-dominating code in a graph is NP-hard}},
-    author = {I. Charon and O. Hudry and A. Lobstein},
-    journal = {{Theoretical Computer Science}},
-    year = {2003},
-    pages = {2109--2120},
-    volume = {290}
 }
 @article{char03c,
     title = {{Extremal cardinalities for identifying and locating-dominating codes in graphs}},
@@ -2709,22 +2747,6 @@
     pages = {221--222},
     address = {Clermont-Ferrand, France}
 }
-@article{grav04,
-    title = {{On graphs having a $V \setminus \{ x \}$ set as an identifying code}},
-    author = {S. Gravier and J. Moncel},
-    journal = {{Discrete Mathematics}},
-    year = {2007},
-    pages = {432--434},
-    volume = {307}
-}
-@article{hafi22,
-    title = {{On the locating chromatic number of trees}},
-    author = {Y. Hafidh and E. Baskoro},
-    journal = {{International Journal of Mathematics and Computer Science}},
-    year = {2022},
-    pages = {377--394},
-    volume = {17}
-}
 @article{haka22A,
     title = {{On vertices contained in all or in no metric basis}},
     author = {A. Hakanen and V. Junnila and T. Laihonen and I. Yero},
@@ -2740,14 +2762,6 @@
     year = {2018},
     pages = {143--160},
     volume = {162}
-}
-@article{hata05,
-    title = {{$\Delta +300$ is a bound on the adjacent vertex distinguishing edge chromatic number}},
-    author = {H. Hatami},
-    journal = {{Journal of Combinatorial Theory, Series B}},
-    year = {2005},
-    pages = {246--256},
-    volume = {95}
 }
 @article{henn12,
     title = {{Identifying vertex covers in graphs}},
@@ -2813,22 +2827,6 @@
     pages = {115--127},
     volume = {94}
 }
-@article{honk01a,
-    title = {{On codes identifying sets of vertices in Hamming spaces}},
-    author = {I. Honkala and T. Laihonen and S. Ranto},
-    journal = {{Designs, Codes and Cryptography}},
-    year = {2001},
-    pages = {193--204},
-    volume = {24}
-}
-@article{honk04a,
-    title = {{On locating-dominating codes in binary Hamming spaces}},
-    author = {I. Honkala and T. Laihonen and S. Ranto},
-    journal = {{Discrete Mathematics and Theoretical Computer Science}},
-    year = {2004},
-    pages = {265--282},
-    volume = {6}
-}
 @article{honk03a,
     title = {{On identification in $Z^2$ using translates of given patterns}},
     author = {I. Honkala and A. Lobstein},
@@ -2846,13 +2844,6 @@
     year = {2004},
     pages = {48},
     address = {Tennessee, USA}
-}
-@article{inay21,
-    title = {{The locating chromatic number of book graph}},
-    author = {N. Inayah and W. Aribowo and M. Windra yahya},
-    journal = {{Journal of Mathematics}},
-    year = {2021},
-    pages = {3}
 }
 @article{jans08,
     title = {{An optimal result for codes identifying sets of words}},
@@ -3082,14 +3073,6 @@
     year = {2021},
     pages = {7},
     volume = {410}
-}
-@article{mart10,
-    title = {{Lower bounds for identifying codes in some infinite grids}},
-    author = {R. Martin and B. Stanton},
-    journal = {{Electronic Journal of Combinatorics}},
-    year = {2010},
-    volume = {17},
-    number = {1}
 }
 @article{mila13a,
     title = {{Set graphs. I. Hereditarily finite sets and extensional acyclic orientations}},
@@ -3582,14 +3565,6 @@
     year = {2012},
     pages = {155--168},
     volume = {213}
-}
-@article{seo12,
-    title = {{Open neighborhood locating-domination for grid-like graphs}},
-    author = {S. Seo and P. Slater},
-    journal = {{Bulletin of the Institute of Combinatorics and its Applications}},
-    year = {2012},
-    pages = {89--100},
-    volume = {65}
 }
 @article{seo14,
     title = {{OLD trees with maximum degree three}},
@@ -4644,4 +4619,36 @@
     pages = {403--420},
     volume = {4},
     number = {2}
+}
+@article{honk04a,
+    title = {{On locating-dominating codes in binary Hamming spaces}},
+    author = {I. Honkala and T. Laihonen and S. Ranto},
+    journal = {{Discrete Mathematics and Theoretical Computer Science}},
+    year = {2004},
+    pages = {265--282},
+    volume = {6}
+}
+@article{seo12,
+    title = {{Open neighborhood locating-domination for grid-like graphs}},
+    author = {S. Seo and P. Slater},
+    journal = {{Bulletin of the Institute of Combinatorics and its Applications}},
+    year = {2012},
+    pages = {89--100},
+    volume = {65}
+}
+@article{blid11k,
+    title = {{A characterization of locating-total domination edge critical graphs}},
+    author = {M. Blidia and W. Dali},
+    journal = {{Discussiones Mathematicae Graph Theory}},
+    year = {2011},
+    pages = {197--202},
+    volume = {31}
+}
+@article{cars95a,
+    title = {{On generalized location-domination}},
+    author = {D. Carson},
+    journal = {{Graph Theory, Combinatorics, and Applications: Proceedings of the 7th Quadrennial International Conference on the Theory and Applications of Graphs}},
+    year = {1995},
+    volume = {1},
+    pages = {161--179}
 }
