--- a/refs.bib
+++ b/refs.bib
@@ -523,6 +523,14 @@
     volume = {5},
     doi = {10.1016/S1571-0653(04)00177-5}
 }
+@inproceedings{jean24d,
+    title = {{Open-Locating-Dominating Sets with Error Correction}},
+    author = {D. Jean and S. Seo},
+    booktitle = {{Proc. of ACM Southeast Conference}},
+    year = {2024},
+    pages = {297--301},
+    doi = {10.1145/3603287.3651212}
+}
 @article{hern10,
     title = {{Extremal graph theory for metric dimension and diameter}},
     author = {C. Hernando and M. Mora and I. Pelayo and C. Seara and D. Wood},
@@ -1920,7 +1928,7 @@
     pages = {591--611},
     doi = {10.7151/dmgt.2465}
 }
-@article{jean25,
+@article{jean25a,
     title = {{Error-Correcting Open-Locating-Dominating Sets}},
     author = {D. Jean and S. Seo},
     journal = {{Congressus Numerantium}},
@@ -1928,6 +1936,14 @@
     year = {2025},
     pages = {23--40},
     doi = {10.61091/cn235-03}
+}
+@article{jean25b,
+    title = {{Fault-Tolerant Locating-Dominating Sets with Error-Correction}},
+    author = {D. Jean and S. Seo},
+    journal = {Discrete Mathematics, Algorithms and Applications},
+    year = {2025},
+    pages = {1--18},
+    doi = {10.1142/S1793830925500491}
 }
 @article{rahb19,
     title = {{Bounds on the identifying codes in trees}},
